Fix gallery alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,11 +132,15 @@ ul li:hover a {
 }
 .thumbnail {
 	width: 29%;
-	text-align: justify;
-	float: left;
+	text-align: center;
+	float: center;
+    padding-left: 20px;
+    padding-right: 20px;
 	margin-top: 35px;
 }
 .gallery .thumbnail h4 {
+    padding-left: 20px;
+    padding-right: 20px;
 	margin-top: 5px;
 	margin-right: 5px;
 	margin-bottom: 5px;
@@ -144,6 +148,8 @@ ul li:hover a {
 	color: #506267;
 }
 .gallery .thumbnail p {
+    padding-left: 20px;
+    padding-right: 20px;
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
